--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-  "plugins": [
-    "transform-class-properties"
-  ],
-  "presets": ["react-native"]
+  "presets": ["module:metro-react-native-babel-preset"]
 }
