--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "2.0.0",
+    "babel-jest": "27.5.1",
+    "metro-react-native-babel-preset": "^0.72.3",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.17.3",
     "husky": "^0.14.1",
-    "jest": "20.0.4",
+    "jest": "27.5.1",
     "react-native": "^0.70.1",
     "react-test-renderer": "18.1.0"
   },
