--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint-plugin-import": "^2.17.3",
     "husky": "^0.14.1",
     "jest": "27.5.1",
-    "react-native": "^0.70.1",
+    "react-native": "0.74.4",
     "react-test-renderer": "18.1.0"
   },
   "peerDependencies": {
